feat: ajustar valores de glicose e atualizar favicon
- Ajustar parâmetros de classificação de glicose conforme padrões clínicos
- Normal: <100mg/dL, Glicose Alta: 100-125mg/dL, Hiperglicemia: 126mg/dL
- Atualizar gráficos com novas linhas de referência
- Substituir favicon pela logo da Glia
- Melhorar dados de exemplo para valores mais realistas

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <title>Monitor de Glicose - Acompanhamento em Tempo Real</title>
     <meta name="description" content="Monitor de glicose em tempo real com gráficos interativos, alertas e tendências para controle glicêmico eficiente" />
     <meta name="author" content="Monitor de Saúde" />
